GUI-1899: updated lock icon color, fixed metadata button alignment

--- a/eucaconsole/static/sass/pages/bucket_item_details.scss
+++ b/eucaconsole/static/sass/pages/bucket_item_details.scss
@@ -13,7 +13,7 @@
 }
 
 .fa-lock {
-    color: $hp-orange;
+    color: $hp-gold;
 }
 
 #shared-url-modal {
